code25_all/python/2353736.txt
Traceback (most recent call last):
  File "C:\Users\Shady\Desktop\tet.py", line 14, in <module>
    exec test
  File "<string>", line 1
    print "hello world"
   ^
IndentationError: unexpected indent

test = ''.join(clientIp.split("test6")[1:])

